Mon Mar 15 22:17:04 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/fvwm.c (SetRCDefaults): add "Exec xterm" to builtin menu.
	Very handy for the times that you f*@# up an install by forgetting
	to install a config file.

1999-03-15  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* libs/Module.c (SendText): Send packets atomically in order
	to avoid fvwm accidentially killing a module after reading the
	first word of the packet too fast.

	* acinclude.m4: include gtk.m4 in order to make rebuilding
	on gtk-less hosts less error-prone.

1999-03-13  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/module.c (SendStrToModule): Make sure fvwm doesn't hold
	any grabs while sending strings to modules. This is necessary for 
	implementing menus in modules.

1999-03-14  Dominik Vogt  <dominik_vogt@gmx.de>

	* utils/fvwmrc_convert: applied MenuStyle patch

	* fvwm/events.c (HandleButtonPress): fixed ClickToFocus

Sat Mar 13 15:12:37 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: add entry for modules/FvwmCommand/scripts/Makefile.

Sat Mar 13 11:04:48 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: added check for perl. Re-ordered to put tests for
	optional libraries near the beginning, so we can fail early if
	desired library is not found.

	* acinclude.m4 (smr_ARG_WITHINCLUDES): removed `unset', as it is
	said to be unportable.

1999-03-13  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* vms/*: updates from Fabien.

1999-03-12  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* fvwm/borders.c (SetBorder): removed text following #endif, as it
	violates the ANSI C standard (or so claims SGI cc).
	
1999-03-12  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (DoMenusOverlap): fixed menu animation bug

1999-03-11  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress): fixed bug with <shift> being
	treated differently than the other modifiers when using ClickToFocus.
