@@ -141,7 +141,8 @@ static struct functions func_config[] =
   {"OPAQUEMOVESIZE", SetOpaque,      F_OPAQUE,              FUNC_NO_WINDOW},
   {"PICK",         PickFunc,         F_PICK,                FUNC_NO_WINDOW},
   {"PIPEREAD",     PipeRead,         F_READ,                FUNC_NO_WINDOW},
-  {"PIXMAPPATH",   pixmapPath_function,F_PIXMAP_PATH,         FUNC_NO_WINDOW},
+  {"PIXMAPPATH",   pixmapPath_function,F_PIXMAP_PATH,       FUNC_NO_WINDOW},
+  {"PLACEAGAIN",   PlaceAgain_func,  F_PLACEAGAIN,          FUNC_NEEDS_WINDOW},
   {"POPUP",        popup_func,       F_POPUP,               FUNC_NO_WINDOW},
   {"PREV",         PrevFunc,         F_PREV,                FUNC_NO_WINDOW},
   {"QUIT",         quit_func,        F_QUIT,                FUNC_NO_WINDOW},
