@@ -2165,6 +2165,14 @@ directories contents, for example.
 This command is obsolete. Please use \IImagePath\fP instead.
 
 
+.IP "PlaceAgain [ \fIAnim\fP ]"
+Causes the current window's position to be re-computed using the initial
+window placement logic.  The window is moved to where it would have
+been if it were a new window that had just appeared.  Most useful with Smart
+or Clever (ReallySmart) placement.  If the optional argument \fIAnim\fP is
+specified, an animated move is used to place the window in its new position. 
+
+
 .IP "Popup \fIPopupName\fP [ \fIposition\fP ] [ \fIdefault-action\fP ]"
 This built-in has two purposes: to bind a menu to a key or mouse
 button, and to bind a sub-menu into a menu.  The formats for the two
